tests/pm_check/bad/pm_unreachable2.scilla
(* Expected result: *)
(* Type checking failed: *)
(* [pm_check/bad/pm_unreachable2.scilla:6:1] Type error in pattern matching on `b` of type Bool (or one of its branches): *)
(* Unreachable pattern. *)
let b = False in
match b with
| x => Int32 0
| False => Int32 1
end
